Actualizada la implementación del servicio de catálogo para devolver DTOs en lugar de entidades